--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.lidaning</groupId>
     <artifactId>mySpringcloud-netflix</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>mySpringcloud-netflix</name>
+    <packaging>pom</packaging>
+    <description>It's a springcloud application which is base on netflix</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -16,6 +19,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
