--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+server:
+  port: 8761
+
 spring:
-  profiles:
-    active: dev
+  application:
+    name: eureka
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
