--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
         git:
           default-label: main
           uri: https://github.com/relidaning/myConfiguration.git
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
