添加springboot-admin监控中心; demo项目添加actuator组件;

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
   application:
     name: demo
 
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka/
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
