--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -3,3 +3,8 @@ server:
 spring:
   application:
     name: admin
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
