--- a/config/pom.xml
+++ b/config/pom.xml
@@ -6,14 +6,8 @@
         <groupId>com.lidaning</groupId>
         <artifactId>mySpringcloud-netflix</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
-    <!--<parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
-        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
-    </parent>-->
     <groupId>com.lidaning</groupId>
     <artifactId>config</artifactId>
     <version>0.0.1-SNAPSHOT</version>
