--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring-cloud.version>Finchley.SR2</spring-cloud.version>
+        <spring-cloud.netflix.version>2.0.2.RELEASE</spring-cloud.netflix.version>
+        <spring-cloud.config.version>2.0.2.RELEASE</spring-cloud.config.version>
+        <spring-boot.web>2.0.6.RELEASE</spring-boot.web>
+        <spring-boot.admin>2.0.4</spring-boot.admin>
+        <spring-boot.actuator>2.0.4.RELEASE</spring-boot.actuator>
     </properties>
 
     <dependencyManagement>
@@ -36,21 +41,25 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+                <version>${spring-cloud.netflix.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.web}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>${spring-boot.actuator}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-config</artifactId>
+                <version>${spring-cloud.config.version}</version>
             </dependency>
 
             <dependency>
@@ -127,6 +136,12 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.6.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-server</artifactId>
+                <version>${spring-boot.admin}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
