添加configuration默认配置及其它项目的config参数;

--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -3,8 +3,6 @@ server:
 spring:
   application:
     name: admin
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+  cloud:
+    config:
+      uri: http://localhost:8888/
