--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -9,8 +9,5 @@ spring:
       server:
         git:
           default-label: main
-          uri: https://github.com/relidaning/myConfiguration.git
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+          uri: https://github.com/relidaning/mySpringcloud-netflix.git
+          search-paths: configuration
