--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -4,9 +4,6 @@ server:
 spring:
   application:
     name: demo
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-
+  cloud:
+    config:
+      uri: http://localhost:8888/
