修改config读取git的配置

--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -8,6 +8,15 @@ spring:
     config:
       server:
         git:
-          default-label: main
-          uri: https://github.com/relidaning/mySpringcloud-netflix.git
-          search-paths: configuration
+          default-label: master
+          uri: https://github.com/relidaning/myConfiguration.git
+          search-paths:
+          skip-ssl-validation: true
+          basedir: target/config
+#          username: 453882101@qq.com
+#          password: eqbq0723@git
+
+eureka:
+  client:
+    fetchRegistry: false
+#    registerWithEureka: false
