再将config配置中心关联的git切换回来；

--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
     config:
       server:
         git:
-          default-label: master
-          uri: https://github.com/relidaning/myConfiguration.git
-          search-paths:
+          default-label: main
+          uri: https://github.com/relidaning/mySpringcloud-netflix.git
+          search-paths: configuration
           skip-ssl-validation: true
           basedir: target/config
 #          username: 453882101@qq.com
