--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <spring-cloud.version>Finchley.SR2</spring-cloud.version>
         <spring-cloud.netflix.version>2.0.2.RELEASE</spring-cloud.netflix.version>
+        <spring-cloud.zuul.version>2.0.2.RELEASE</spring-cloud.zuul.version>
         <spring-cloud.config.version>2.0.4.RELEASE</spring-cloud.config.version>
         <spring-boot.web>2.0.6.RELEASE</spring-boot.web>
         <spring-boot.admin>2.0.4</spring-boot.admin>
@@ -142,6 +143,12 @@
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin-starter-server</artifactId>
                 <version>${spring-boot.admin}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+                <version>${spring-cloud.zuul.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
