--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -26,6 +26,15 @@
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
 
+        <!-- zuul网关的重试机制，不是使用ribbon内置的重试机制
+   是借助spring-retry组件实现的重试
+   开启zuul网关重试机制需要增加下述依赖
+ -->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
