--- a/configuration/application.yml
+++ b/configuration/application.yml
@@ -18,7 +18,7 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: 82.157.147.8
     prefer-ip-address: true
   client:
     service-url:
