--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -1,14 +1,25 @@
 server:
-  port: 9020
+  port: 8070
 
 spring:
   application:
     name: zuul
   cloud:
     config:
-      uri: http://localhost:8888/
+      uri: http://82.157.147.8:8888/
 
 zuul:
   routes:
-    user-provider: /service/**
-  ignored-services: admin, eureka
+    demo:
+      path: /demo/**
+      url: 82.157.147.8:8080
+  ignored-services: admin, eureka6
+
+eureka:
+  instance:
+    hostname: 82.157.147.8
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:8761/eureka
+    fetch-registry: false
