--- a/configuration/application.yml
+++ b/configuration/application.yml
@@ -3,7 +3,7 @@ spring:
   #    active: dev
   cloud:
     config:
-      uri: http://localhost:8888/
+      uri: http://82.157.147.8:8888/
 #  datasource:
 #    url: jdbc:oracle:thin:@192.168.178.128:1521/xe
 #    username: lidaning
