--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: eureka
   cloud:
     config:
-      uri: http://localhost:8888/
+      uri: http://82.157.147.8:8888/
 
 #eureka:
 #  client:
