--- a/configuration/application.yml
+++ b/configuration/application.yml
@@ -43,6 +43,6 @@ jwt:
 zuul:
   sensitive-headers: Set-Cookie,Cookie,Host,Connection,Content-Length,Content-Encoding,Server,Transfer-Encoding,X-Application-Context
 
-info:
-  mail: shake@google.com
-  nickName: shake
+#info:
+#  mail: shake@google.com
+#  nickName: shake
