--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>config</module>
         <module>demo</module>
         <module>admin</module>
+        <module>zuul</module>
     </modules>
     <packaging>pom</packaging>
     <description>It's a springcloud application which is base on netflix</description>
