--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.lidaning</groupId>
         <artifactId>mySpringcloud-netflix</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>com.lidaning</groupId>
     <artifactId>zuul</artifactId>
@@ -24,6 +24,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
         <!-- zuul网关的重试机制，不是使用ribbon内置的重试机制
