修改测试是否会读取config.application.properties文件；

--- a/configuration/application.properties
+++ b/configuration/application.properties
@@ -15,5 +15,5 @@ jwt.ISSUE=lidaning
 
 zuul.sensitive-headers=Set-Cookie,Cookie,Host,Connection,Content-Length,Content-Encoding,Server,Transfer-Encoding,X-Application-Context
 
-info.mail=shake@google.com
+info.mail=shake@config-app.properties
 info.nickName=shake
