配置中心添加dev配置; 各应用添加profile指定;

--- a/demo/src/main/resources/bootstrap.properties
+++ b/demo/src/main/resources/bootstrap.properties
@@ -1,5 +1,6 @@
 server.port=8080
 spring.application.name=demo
+spring.profiles.active=dev
 
 spring.cloud.confg.label=main
 spring.cloud.config.uri=http://82.157.147.8:8888/
