--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <!-- zuul网关的重试机制，不是使用ribbon内置的重试机制
    是借助spring-retry组件实现的重试
