--- a/zuul/src/main/resources/bootstrap.properties
+++ b/zuul/src/main/resources/bootstrap.properties
@@ -1,5 +1,6 @@
 server.port=8070
 spring.application.name=zuul
+spring.profiles.active=dev
 
 spring.cloud.confg.label=main
 spring.cloud.config.uri=http://82.157.147.8:8888/
