注释zuul.sensitive-headers,测试其是否是admin监控不到项目的原因

--- a/configuration/application.yml
+++ b/configuration/application.yml
@@ -44,8 +44,8 @@ jwt:
   TIMEOUT: 60000
   ISSUE: lidaning
 
-zuul:
-  sensitive-headers: Set-Cookie,Cookie,Host,Connection,Content-Length,Content-Encoding,Server,Transfer-Encoding,X-Application-Context
+#zuul:
+#  sensitive-headers: Set-Cookie,Cookie,Host,Connection,Content-Length,Content-Encoding,Server,Transfer-Encoding,X-Application-Context
 
 info:
   mail: shake@config-app.yml
