--- a/configuration/application-dev.yml
+++ b/configuration/application-dev.yml
@@ -24,7 +24,7 @@ spring:
 eureka:
   instance:
     hostname: ${mySpringcloud-netflix.server.ip}
-    prefer-ip-address: true
+#    prefer-ip-address: true
   client:
     service-url:
       defaultZone: http://${eureka.instance.hostname}:8761/eureka
