--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
-                <version>2.0.6.RELEASE</version>
+                <version>${spring-boot.security}</version>
             </dependency>
 
             <dependency>
